Moved assets around and started working on Home page

--- a/src/assets/json/projects.json
+++ b/src/assets/json/projects.json
@@ -2,7 +2,7 @@
     {
         "title": "Project 1",
         "github": "https://github.com",
-        "image":"screenshot.png"
+        "image":"portfolio-item1.jpg"
     },
     {
         "title": "Project 2",
